fix: emoji bar on narrow screens

--- a/packages/frontend/src/app/components/emoji-collections/emoji-collections.component.scss
+++ b/packages/frontend/src/app/components/emoji-collections/emoji-collections.component.scss
@@ -69,7 +69,6 @@ $narrow: 800px;
   padding-left: 0.2rem;
   padding-right: 0.2rem;
   height: 400px;
-  flex-direction: column;
   overflow-x: hidden;
   overflow-y: scroll;
   text-align: center;
@@ -78,6 +77,7 @@ $narrow: 800px;
   background-color: var(--mat-sys-surface-container-highest);
 
   @media (max-width: $narrow) {
+    display: flex;
     flex-direction: row;
     height: 64px;
     overflow-y: hidden;
